# RuntimeFabricMod

./: README.md
dll/: CMakeLists.txt  jvmwork.cpp  jvmwork.h  main.cpp  utils.cpp  utils.h
dll/hooks/: jnihook.cpp
dll/injecting_classes/: injector_replace_it.h  jar.h
raw_java/: GenerateHeaders.java  Injection.java
